# cmake_tensorflow_c

./: CMakeLists.txt  LICENSE  README.md  build_tensorflow.sh
